--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".NewProjectActivity" >
         </activity>
+        <activity android:name=".ProjectActivity" />
     </application>
 
 </manifest>
