--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="io.github.dhamith93.projectone">
 
     <application
+        android:name=".ProjectOne"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,6 +30,7 @@
         </activity>
         <activity android:name=".ProjectActivity" />
         <activity android:name=".NewTaskActivity" />
+        <activity android:name=".TaskActivity" />
     </application>
 
 </manifest>
