--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".ProjectActivity" />
         <activity android:name=".NewTaskActivity" />
         <activity android:name=".TaskActivity" />
+        <activity android:name=".GroupActivity" />
+        <activity android:name=".NewGroupActivity" />
     </application>
 
 </manifest>
