Search users with email

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".TaskActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".NewGroupActivity" />
+        <activity android:name=".SearchActivity" />
     </application>
 
 </manifest>
