--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
 
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".ChatActivity" android:parentActivityName=".HomeActivity"></activity>
     </application>
 
 </manifest>
